--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=google_sheets
+
+google.project.name=${GOOGLE_PROJECT_NAME}
+google.project.table.customers.id=${CUSTOMERS_TABLE_ID}
+google.project.table.suppliers.id=${SUPPLIERS_TABLE_ID}
+google.credentials.path=${GOOGLE_CREDENTIALS_PATH}
