Implementation of pipeline request processing. Optimization of the program.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=google_sheets
 
 google.project.name=${GOOGLE_PROJECT_NAME}
-google.project.table.customers.id=${CUSTOMERS_TABLE_ID}
-google.project.table.suppliers.id=${SUPPLIERS_TABLE_ID}
-google.credentials.path=${GOOGLE_CREDENTIALS_PATH}
+google.project.table.customersId=${CUSTOMERS_TABLE_ID}
+google.project.table.suppliersId=${SUPPLIERS_TABLE_ID}
+google.project.credentialsPath=${GOOGLE_CREDENTIALS_PATH}
